; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/aquantia/atlantic/hw_atl/extr_hw_atl_utils.c_hw_atl_utils_mpi_set_speed.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/aquantia/atlantic/hw_atl/extr_hw_atl_utils.c_hw_atl_utils_mpi_set_speed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aq_hw_s = type { i32 }

@HW_ATL_MPI_CONTROL_ADR = common dso_local global i32 0, align 4
@HW_ATL_MPI_SPEED_MSK = common dso_local global i32 0, align 4
@HW_ATL_MPI_SPEED_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.aq_hw_s*, i32)* @hw_atl_utils_mpi_set_speed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hw_atl_utils_mpi_set_speed(%struct.aq_hw_s* %0, i32 %1) #0 {
  %3 = alloca %struct.aq_hw_s*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.aq_hw_s* %0, %struct.aq_hw_s** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.aq_hw_s*, %struct.aq_hw_s** %3, align 8
  %7 = load i32, i32* @HW_ATL_MPI_CONTROL_ADR, align 4
  %8 = call i32 @aq_hw_read_reg(%struct.aq_hw_s* %6, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @HW_ATL_MPI_SPEED_MSK, align 4
  %11 = xor i32 %10, -1
  %12 = and i32 %9, %11
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @HW_ATL_MPI_SPEED_SHIFT, align 4
  %15 = shl i32 %13, %14
  %16 = load i32, i32* %5, align 4
  %17 = or i32 %16, %15
  store i32 %17, i32* %5, align 4
  %18 = load %struct.aq_hw_s*, %struct.aq_hw_s** %3, align 8
  %19 = load i32, i32* @HW_ATL_MPI_CONTROL_ADR, align 4
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @aq_hw_write_reg(%struct.aq_hw_s* %18, i32 %19, i32 %20)
  ret i32 0
}

declare dso_local i32 @aq_hw_read_reg(%struct.aq_hw_s*, i32) #1

declare dso_local i32 @aq_hw_write_reg(%struct.aq_hw_s*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
